--- a/zwpa_app/app/views/partials/_nav.html.erb
+++ b/zwpa_app/app/views/partials/_nav.html.erb
@@ -3,7 +3,7 @@
       <ul class="title-area">
         <li class="name">
           <h1>
-            <%= link_to 'Zero Waste Pittsburgh', root_url %>
+            <%= link_to 'Zero Waste Pennsylvania', root_url %>
           </h1>
         </li>
          <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
