created questionnaire border

--- a/zwpa_app/app/assets/stylesheets/walkthroughs.css.scss
+++ b/zwpa_app/app/assets/stylesheets/walkthroughs.css.scss
@@ -58,6 +58,16 @@ input[type=checkbox]:not(old){
 
 }
 
+.form-back{
+  background-color: #FAFAFA;
+  border           : 0.1em solid rgb(182,182,182);
+  border-radius    : 1em;
+  padding-left: 2em;
+  padding-right: 2em;
+}
+
+
+
 
 
 
