--- a/zwpa_app/app/views/walkthroughs/new.html.erb
+++ b/zwpa_app/app/views/walkthroughs/new.html.erb
@@ -1,5 +1,7 @@
 <h1>Initial Questionnaire</h1>
 
-<%= render 'form' %>
+<div class="form-back">
+	<%= render 'form' %>
+</div>
 
 <%= link_to 'Back', walkthroughs_path, class: 'button' %>
