--- a/zwpa_app/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/zwpa_app/app/assets/stylesheets/foundation_and_overrides.scss
@@ -1364,7 +1364,7 @@ $white       : #FFFFFF;
 // $include-html-top-bar-classes: $include-html-classes;
 
 // Background color for the top bar
-$topbar-bg-color: #009900;
+$topbar-bg-color: #46523C;
 // $topbar-bg: $topbar-bg-color;
 
 // Height and margin
@@ -1395,8 +1395,8 @@ $topbar-title-bg-hover: #00cc00;
 // $topbar-link-font-size: rem-calc(13);
 // $topbar-link-hover-lightness: -10%; // Darken by 10%
 // $topbar-link-bg: $topbar-bg;
- $topbar-link-bg-color-hover: #00cc00;
- $topbar-link-bg-hover: #00cc00;
+ $topbar-link-bg-color-hover: $jet;
+ $topbar-link-bg-hover: $jet;
 // $topbar-link-bg-active: $primary-color;
 // $topbar-link-bg-active-hover: scale-color($primary-color, $lightness: -14%);
 // $topbar-link-font-family: $body-font-family;
