added frames around sections, changed links at bottom into buttons

--- a/zwpa_app/app/views/requests/show.html.erb
+++ b/zwpa_app/app/views/requests/show.html.erb
@@ -5,30 +5,33 @@
 </h1>
 
 <div class="small-12 medium-12 large-7 columns">
-  <h3>Documents</h3>
-  <ol>
-    <li>
-      Questionnaire - 
-      <% @walkthroughs = Walkthrough.where(request_id: @request.id) %>
-      <% @walkthroughs.each do |walkthrough| %>
-      <%= link_to walkthrough.created_at.strftime('%b %e, %Y'), walkthrough %>
-      <% end %>
-    </li>
-    <%= link_to 'Add Walkthrough', new_walkthrough_path(:request_id => @request.id) %><br><br>
-<!--     *********TEST AFTER AUDIT/WASTE MODELS/CONTROLLERS WORK******** -->
-    <%#= @audits = Audit.where(request_id: @request_id) %>
-    <%# @audits.each do |audit| %>
-    <li>
-      <%#= audit.generator %> Audit - 
-      <%#= link_to audit.created_at.strftime('%b %e, %Y'), audit %>
-    </li>
-    <%# end %>
-    <%= link_to 'Add Audit', new_audit_path(:request_id => @request.id) %>
-  </ol>
-</div>
+  <fieldset>
+    <legend><h3>Documents</h3></legend>
+      <ol>
+        <li>
+          Questionnaire - 
+          <% @walkthroughs = Walkthrough.where(request_id: @request.id) %>
+          <% @walkthroughs.each do |walkthrough| %>
+          <%= link_to walkthrough.created_at.strftime('%b %e, %Y'), walkthrough %>
+          <% end %>
+        </li>
+        <%= link_to 'Add Questionnaire', new_walkthrough_path(:request_id => @request.id) %><br><br>
+    <!--     *********TEST AFTER AUDIT/WASTE MODELS/CONTROLLERS WORK******** -->
+        <%#= @audits = Audit.where(request_id: @request_id) %>
+        <%# @audits.each do |audit| %>
+        <li>
+          <%#= audit.generator %> Audit - 
+          <%#= link_to audit.created_at.strftime('%b %e, %Y'), audit %>
+        </li>
+        <%# end %>
+        <%= link_to 'Add Audit', new_audit_path(:request_id => @request.id) %>
+      </ol>
+    </div>
+  </fieldset>
 
 <div class="show-for-large-up large-5 columns">
-  <h3>Request Details</h3>
+  <fieldset>
+  <legend><h3>Request Details</h3></legend>
   <p>
     <strong>Customer:</strong>
     <%= @request.customer.company_name %>
@@ -78,29 +81,21 @@
     <strong>Date:</strong>
     <%= @request.date %>
   </p>
+  </fieldset>
 </div>
 
 <div class="notes">
-    <p>
-    <strong>Note:</strong>
-    <%#= @request.Note %>
-  </p>
-
-  <p>
-    <strong>Request:</strong>
-    <%#= @request.request_id %>
-  </p>
-
-  <p>
-    <strong>Photo:</strong>
-    <%#= @request.photo %>
-  </p>
-
-  <p>
-    <strong>Description:</strong>
-    <%#= @request.description %>
-  </p>
+  <fieldset>
+  <legend><h3>Notes</h3></legend>
+<!--   ********* TEST AFTER NOTE MODEL/CONTROLLER ARE DONE ********* -->
+<!--   <ul>
+    <%# @notes = Note.where(request_id: @request.id) %>
+    <%# @notes.each do |note| %>
+    <li><%#= note.description %></li>
+    <li><%#= note.photo %></li>
+  </ul> -->
+  </fieldset>
 </div>
 
-<%= link_to 'Edit', edit_request_path(@request) %> |
-<%= link_to 'Back', requests_path %>
+<%= link_to 'Edit Request', edit_request_path(@request), :class => "button" %>
+<%= link_to 'Back to All Requests', requests_path, :class => "button" %>
