--- a/zwpa_app/app/views/requests/index.html.erb
+++ b/zwpa_app/app/views/requests/index.html.erb
@@ -16,7 +16,6 @@
       <th>Description</th> -->
       <th>Show</th>
       <th>Edit</th>
-      <th>Delete</th>
     </tr>
   </thead>
 
@@ -24,17 +23,16 @@
     <% @requests.each do |request| %>
       <tr>
         <!-- <td><%= request.customer_id %></td> -->
-        <td><%= link_to request.customer.company_name, request_path(request) %></td>
-        <td><%= request.contact_firstname+" "+request.contact_lastname %></td>
-        <td><%= request.title %></td>
-        <td><%= request.email %></td>
-        <td><%= request.phone %></td>
-        <td><%= request.street_address+" "+request.city+", "+request.state %></td>
-        <td><%= request.date.strftime('%b %e, %Y') %></td>
+        <td><%= link_to request.customer.company_name, request.customer %></td>
+        <td><%= link_to request.contact_firstname+" "+request.contact_lastname, request_path(request) %></td>
+        <td><%= link_to request.title, request_path(request) %></td>
+        <td><%= link_to request.email, request_path(request) %></td>
+        <td><%= link_to request.phone, request_path(request) %></td>
+        <td><%= link_to request.street_address+" "+request.city+", "+request.state, request_path(request) %></td>
+        <td><%= link_to request.date.strftime('%b %e, %Y'), request_path(request) %></td>
         
-        <td><%= link_to 'Show', request %></td>
-        <td><%= link_to 'Edit', edit_request_path(request) %></td>
-        <td><%= link_to 'Delete', request, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Show', request, class: 'button tiny' %></td>
+        <td><%= link_to 'Edit', edit_request_path(request), class: 'button tiny' %></td>
       </tr>
     <% end %>
   </tbody>
@@ -42,4 +40,4 @@
 
 <br>
 
-<%= link_to 'New Request', new_request_path %>
+<%= link_to 'New Request', new_request_path, class: 'button' %>
